# hc-cooperative-content

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INTEGRITY_MODEL.md  Makefile  README.md  devhub.json
coop_content_sdk/: Cargo.toml  README.md
coop_content_sdk/src/: lib.rs
coop_content_types/: Cargo.toml
coop_content_types/src/: group_entry.rs  lib.rs
crates/hc_coop_content_sdk/: Cargo.toml  README.md
crates/hc_coop_content_types/: Cargo.toml  README.md
crates/hc_coop_content_types/src/: group_entry.rs
docs/: API.md
docs/rfcs/: RFC-2023-07-19-coop-content-naming.md
hdi_extensions/: Cargo.toml
hdi_extensions/src/: lib.rs  macros.rs
hdk_extensions/: Cargo.toml
hdk_extensions/src/: lib.rs
prototype/: Makefile  authority_based_agent_anchors_discovery.js  dna.js  entries.js  package-lock.json  package.json
prototype/coordinators/: agent_anchor_links.js
tests/: Makefile  package-lock.json  package.json  test_zomelets.js  types.js  utils.js
tests/general_dna/: dna.yaml
tests/integration/: test_content_types.js  test_general_dna.js  test_minimal_dna.js  test_minimal_external_pointers.js  test_model_dna.js  types.js
tests/minimal_dna/: dna.yaml
tests/model_dna/: Makefile  dna.yaml
tests/model_dna/test_types/: Cargo.toml
tests/model_dna/test_types/src/: lib.rs
tests/model_dna/zomes/: Cargo.toml
tests/model_dna/zomes/basic_usage/: Cargo.toml
tests/model_dna/zomes/basic_usage/src/: lib.rs
tests/model_dna/zomes/basic_usage_csr/: Cargo.toml
tests/model_dna/zomes/basic_usage_csr/src/: lib.rs
tests/test_types/: Cargo.toml
tests/test_types/src/: lib.rs
tests/zomes/: Cargo.toml
tests/zomes/basic_usage/: Cargo.toml
tests/zomes/basic_usage/src/: lib.rs
tests/zomes/basic_usage_csr/: Cargo.toml
tests/zomes/basic_usage_csr/src/: lib.rs
tests/zomes/corrupt_csr/: Cargo.toml
tests/zomes/corrupt_csr/src/: lib.rs
tests/zomes/debug_csr/: Cargo.toml
tests/zomes/debug_csr/src/: lib.rs
tests/zomes/general_csr/: Cargo.toml
tests/zomes/general_csr/src/: lib.rs
zomelets/: README.md  package-lock.json  package.json  webpack.config.js
zomelets/src/: index.js  types.js
zomes/: Cargo.toml
zomes/coop_content/: Cargo.toml  zome.json
zomes/coop_content/src/: lib.rs  validation.rs
zomes/coop_content/src/validation/: create_entry.rs  create_link.rs  delete_entry.rs  delete_link.rs  macros.rs  update_entry.rs
zomes/coop_content_csr/: Cargo.toml  zome.json
zomes/coop_content_csr/src/: lib.rs  scoped_types.rs
zomes/coop_content_csr/src/scoped_types/: entry_traits.rs
