[workspace]
members = [
  "crates/*",
  "zomes/*"
]
resolver = "2"

[workspace.dependencies]
coop_content = { path = "zomes/coop_content" }
hc_coop_content_types = { version = "0.7.0-dev.0", path = "crates/hc_coop_content_types" }
hc_coop_content_sdk = { version = "0.8.0-dev.0", path = "crates/hc_coop_content_sdk" }
hdi = { version = "=0.5.0-dev.17" }
hdk = { version = "=0.4.0-dev.19" }
lazy_static = "1.4"
serde = "1"
