[package]
name = "hc_coop_content_sdk"
version = "0.2.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/mjbrisebois/hc-cooperative-content"
description = "Standard development kit for the 'Cooperative Content' Holochain zomes"
readme = "README.md"

[lib]
name = "coop_content_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
# hc_coop_content_types = "0.1"
hc_coop_content_types = { path = "../coop_content_types" }
serde = "1"
whi_hdk_extensions = "0.6"
