[package]
name = "hc_coop_content_sdk"
version = "0.6.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/mjbrisebois/hc-cooperative-content"
description = "Standard development kit for the 'Cooperative Content' Holochain zomes"
readme = "README.md"

[lib]
name = "coop_content_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_coop_content_types = { version = "0.5", path = "../coop_content_types" }
serde = "1"
whi_hdk_extensions = "0.10"
