[package]
name = "coop_content_types"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "coop_content_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
thiserror = "1"
whi_hdk_extensions = { path = "../../whi_hdk_extensions" }
