[package]
name = "hc_coop_content_types"
version = "0.2.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/mjbrisebois/hc-cooperative-content"
description = "Definitions used by the 'Cooperative Content' zomes"
readme = "README.md"

[lib]
name = "coop_content_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
whi_hdi_extensions = "0.7"
