[package]
name = "hc_coop_content_sdk"
version = "0.8.0-dev.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-cooperative-content"
description = "Standard development kit for the 'Cooperative Content' Holochain zomes"
readme = "README.md"

[lib]
name = "coop_content_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_coop_content_types = { version = "0.7.0-dev.1", path = "../hc_coop_content_types" }
serde = "1"
whi_hdk_extensions = "0.13"
