[package]
name = "hc_coop_content_types"
version = "0.7.0-dev.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-cooperative-content"
description = "Definitions used by the 'Cooperative Content' zomes"
readme = "README.md"

[lib]
name = "coop_content_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
whi_hdi_extensions = "0.13"
