[package]
name = "coop_content"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "coop_content"
crate-type = ["cdylib", "rlib"]

[dependencies]
coop_content_types = {path = "../../coop_content_types"}
hc_hdi_extensions = { path = "../../hdi_extensions" }
hdi = "0.4.0-beta-dev.1"
hdk = "0.3.0-beta-dev.2"
serde = "1"
