[package]
name = "coop_content_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "coop_content_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
coop_content = {path = "../coop_content"}
hc_coop_content_sdk = {path = "../../coop_content_sdk"}
lazy_static = "1.4"
serde = "1"
