[package]
name = "basic_usage_csr"
version = "0.0.0"
edition = "2018"

[lib]
name = "basic_usage_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
basic_usage = { path = "../basic_usage" }
coop_content_types = { path = "../../../coop_content_types" }
hdk = "0.3.0-beta-dev.2"
serde = "1"
test_types = { path = "../../test_types" }
whi_hdk_extensions = "0.1"
# whi_hdk_extensions = { path = "../../../../hdk_extensions" }
