[package]
name = "basic_usage_csr"
version = "0.0.0"
edition = "2018"

[lib]
name = "basic_usage_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
basic_usage = { path = "../basic_usage" }
coop_content_types = { path = "../../../coop_content_types" }
serde = "1"
test_types = { path = "../../test_types" }
