[package]
name = "corrupt_csr"
version = "0.0.0"
edition = "2018"

[lib]
name = "corrupt_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
coop_content = { path = "../../../zomes/coop_content" }
hdk = "0.3.0-beta-dev.2"
serde = "1"
whi_hdk_extensions = "0.1"
# whi_hdk_extensions = { path = "../../../../hdk_extensions" }
